syntax = "proto3";

/*
    * HOW TO : generate proto
    protoc proto/postpb/post.proto --go_out=plugins=grpc:.
*/

package postpb;
option go_package="proto/postpb";

// defenition of post
message Post {
    string id = 1;
    string url = 2;
    string title = 3;
    string description = 4;
    string image = 5;
    repeated string tag = 6;
    string user_id = 7;
}

// create a new post
message CreatePostRequest {
    Post post = 1;
}
message CreatePostResponse {
    string message = 1;
}

// delete a post
message DeletePostRequest {
    string id = 1;
}
message DeletePostResponse {
    string message = 1;
}

// get all posts by user_id
message GetAllPostsByUserIDRequest {
    string user_id = 1;
}
message GetAllPostsByUserIDResponse {
    repeated Post posts = 1;
}

// Search Posts
message SearchPostsRequest {
    string user_id = 1;
    string how = 2;
    repeated string keywords = 3;
}
message SearchPostsResponse {
    repeated Post posts = 1;
}

// scraping by URL
message PostURLRequest {
    string url = 1;
}

message PostResponse {
    string url = 1;
    string title = 2;
    string description = 3;
    string image = 4;
}

service PostService {
    // create a new post
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse) {};
    // delete a post
    rpc DeletePost (DeletePostRequest) returns (DeletePostResponse) {};
    // get all posts by user_id
    rpc GetAllPostsByUserID (GetAllPostsByUserIDRequest) returns (GetAllPostsByUserIDResponse) {};
    // Search Posts
    rpc SearchPosts (SearchPostsRequest) returns (SearchPostsResponse) {};
    // scraping by URL
    rpc GetPostDetail(PostURLRequest) returns (PostResponse) {};
}